--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,22 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "dark-theme-switcher": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-icons": "^5.0.1",
     "react-input-emoji": "^4.1.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "semantic-ui-react": "^2.1.5",
     "socket.io-client": "^4.5.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
